--- a/JaiSmi/Views/Home/Index.cshtml
+++ b/JaiSmi/Views/Home/Index.cshtml
@@ -29,7 +29,11 @@
         </div>
         <div class="grid">
             <div class="grid-item">
-
+                <div class="home-tile-container">
+                    <div class="home-tile photos-tile">
+                        <p class="home-tile-title">Photos</p>
+                    </div>
+                </div>
             </div>
         </div>
         @*<div class="row">
