--- a/JaiSmi/Views/Shared/Header.cshtml
+++ b/JaiSmi/Views/Shared/Header.cshtml
@@ -11,7 +11,7 @@
                 <a>Travel Diaries</a>
             </li>
             <li>
-                <a>About Me</a>
+                <a>Kid's Co</a>
             </li>
         </ul>
     </div>
