--- a/JaiSmi/Content/LessInput/Layout.css
+++ b/JaiSmi/Content/LessInput/Layout.css
@@ -3,7 +3,7 @@
   font-size: 14px;
   font-weight: normal;
   line-height: 1.4em;
-  color: #ffffff;
+  color: #333333;
   -webkit-font-smoothing: antialiased;
 }
 .body-text .link,
@@ -21,7 +21,7 @@ body {
   font-size: 14px;
   font-weight: normal;
   line-height: 1.4em;
-  color: #ffffff;
+  color: #333333;
   -webkit-font-smoothing: antialiased;
   margin: 0;
 }
@@ -95,7 +95,7 @@ body a:hover {
 }
 @media screen and (max-width: 767px) {
   .header {
-    width: 100px;
+    width: 80px;
     height: 100%;
     position: absolute;
     top: 0;
@@ -107,7 +107,7 @@ body a:hover {
 }
 @media screen and (max-width: 767px) {
   .content-wrapper {
-    padding: 0 15px 25px;
+    padding: 25px 15px;
     margin-left: 100px;
   }
 }
