--- a/JaiSmi/Content/LessInput/Layout.less
+++ b/JaiSmi/Content/LessInput/Layout.less
@@ -5,7 +5,7 @@
     font-size: 14px;
     font-weight: normal;
     line-height: 1.4em;
-    color: @color-white;
+    color: @color-dark-grey;
     .antialias-font-smoothing;
     .link, a {
         color: @link-color;
@@ -76,7 +76,7 @@ body {
         }
     }
     @media screen and (max-width: @screen-xs-max) {
-        width: 100px;
+        width: 80px;
         height: 100%;
         position: absolute;
         top: 0;
@@ -87,7 +87,7 @@ body {
 .content-wrapper {
     padding: 30px 50px;
     @media screen and (max-width: @screen-xs-max) {
-        padding: 0 15px 25px;
+        padding: 25px 15px;
         margin-left: 100px; // Same as that of the header.
     }
 }
