--- a/JaiSmi/Views/Home/Index.cshtml
+++ b/JaiSmi/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
             <div class="home-description-content col-sm-6 col-xs-12">
                 <div class="home-tile about-me-tile">
                 </div>
-                <p>
+                <div class="about-me-description">
                     <p>This is the sole space in web where my thoughts, feelings, knowledge and views are shared.</p>
                     <p>
                         Its hard to explain about yourself as u know yourself so well. But then, no one else can do this part better than you.
@@ -24,18 +24,66 @@
                         and to taste the variety of cuisines. And if given the liberty, I would like to spent my days reading books, imagining myself as the characters,
                         sipping coffee at intervals and eating whatever I can grab at.
                     </p>
-                </p>
-            </div>
-        </div>
-        <div class="grid">
-            <div class="grid-item">
-                <div class="home-tile-container">
-                    <div class="home-tile photos-tile">
-                        <p class="home-tile-title">Photos</p>
-                    </div>
                 </div>
             </div>
         </div>
+
+        <div class="activity-wrapper row">
+            <div class="activity-wrapper-title">Trips</div>
+            <div class="activity-grid">
+                <div class="activity-item">
+                    <div class="activity-cover-container">
+                        <img class="activity-cover" src="~/Images/Shared/travel_cover.jpg" />
+                    </div>
+                    <p class="activity-title">Bison - Kabini</p>
+                </div>
+                <div class="activity-item">
+                    <div class="activity-cover-container">
+                        <img class="activity-cover" src="~/Images/Shared/delhi_srinagar_cover.jpg" />
+                    </div>
+                    <p class="activity-title">Delhi - Srinagar</p>
+                </div>
+                <div class="activity-item">
+                    <div class="activity-cover-container">
+                        <img class="activity-cover" src="~/Images/Shared/athirapally_cover.jpg" />
+                    </div>
+                    <p class="activity-title">Athirapally - Alleppey</p>
+                </div>
+                <div class="activity-item">
+                    <div class="activity-cover-container">
+                        <img class="activity-cover" src="~/Images/Shared/pichavaram_cover.jpg" />
+                    </div>
+                    <p class="activity-title">Pichavaram</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="activity-wrapper row">
+            <div class="activity-wrapper-title">Blogs</div>
+            <div class="activity-grid">
+                <div class="activity-item">
+                    <p class="activity-title">The bossy kid</p>
+                    <p class="activity-desc">I had a horrible afternoon yesterday. Well the forenoon went in usual pace, but afternoon appeared to move like snail. Wonder why I wish so bad to get back home and cuddle up with my near ones! Is it just because a kinder garden principal has used the word domination?  Or is it because I have seen it in exaggerated terms?</p>
+                </div>
+                <div class="activity-item">
+                    <p class="activity-title">The three poignant words</p>
+                    <p class="activity-desc">At about 20:00hrs, the sudden realization of hunger made me rush to kitchen to grab something to eat. Very soon I recollected that I have sent my maid home and hence I have to cook dinner myself. The guilt of ideally sitting and wasting time in one side and the craving on the other side, made me storm into action. By God’s grace, my little ones had enough cookies to their desire and hence were ready to wait for more than an hour for dinner. After fifteen to twenty minutes, my two year old peeped into the kitchen.</p>
+                </div>
+                <div class="activity-item">
+                    <p class="activity-title">Bye Bye 2014</p>
+                    <p class="activity-desc">Yes, it indeed was a great year. As usual it started with b'day celebrations, festivals and lots of fun. The mid of the year remained saturated with happiness and some value additions to family viz. a bull and a retreat. The year winded up with certain financial loses and hectic work schedules.</p>
+                </div>
+                <div class="activity-item">
+                    <p class="activity-title">A weekend thought</p>
+                    <p class="activity-desc">Sitting in my favourite couch and having a cup of coffee with a book in the other hand is one of the best relaxing postures I used to have during the week ends. This was a way to clear off the previous week tensions and gearing up the strength to manage the new ones. This week somehow my thoughts drifted to my school days. As I was thinking my elder one whom we adorably call as Ammuz stormed into the room with a couple of complaints about her little sister.</p>
+                </div>
+                <div class="activity-item">
+                    <p class="activity-title">The Iron Chariot</p>
+                    <p class="activity-desc">I walked up to this organization for the first time, eleven years back. My mind was flooded with happiness on my selection but anxiety didn’t allow me to rejoice much. But, I felt on top of the world.  With heart felt thanks to GOD, parents and of course to all others who prayed for me, I joined the Group B cadre.</p>
+                </div>
+            </div>
+        </div>
+
         @*<div class="row">
             <div class="home-tile-container col-xs-12">
                 <div class="home-tile photos-tile">
@@ -58,4 +106,12 @@
         </div>*@
     </div>
 </div>
+
+@using (Html.BeginScriptContext())
+{
+    foreach (var script in BundleResolver.Current.GetBundleContents("~/bundles/home"))
+    {
+        Html.AddScriptFile(script);   
+    }
+}
 
