Blog page and its add/edit section.

--- a/JaiSmi/Areas/Blog/Content/LessInput/Blog.less
+++ b/JaiSmi/Areas/Blog/Content/LessInput/Blog.less
@@ -30,6 +30,17 @@
     }
 }
 
+.blog-post-create-btn-wrapper {
+    padding-left: 20px;
+    .btn-create-post {
+        font-size: 18px;
+    }
+    @media screen and (max-width: @screen-xs-max) {
+        padding-left: 0;
+        margin-bottom: 15px;
+    }
+}
+
 .edit-icon {
     font-size: 30px;
     padding-left: 10px;
