--- a/JaiSmi/Areas/Blog/Content/LessInput/Blog.css
+++ b/JaiSmi/Areas/Blog/Content/LessInput/Blog.css
@@ -5,7 +5,6 @@
 .blog-post-wrapper .blog-post-container {
   width: 75%;
   box-shadow: 1px 1px 3px 2px rgba(0, 0, 0, 0.3);
-  box-shadow: 1px 1px 3px 2px 0.3;
   behavior: url("/Scripts/Compatibility/PIE.htc");
   padding: 0 35px 20px 35px;
 }
@@ -20,6 +19,18 @@
 @media screen and (max-width: 767px) {
   .blog-post-wrapper .blog-post-container {
     width: 90%;
+  }
+}
+.blog-post-create-btn-wrapper {
+  padding-left: 20px;
+}
+.blog-post-create-btn-wrapper .btn-create-post {
+  font-size: 18px;
+}
+@media screen and (max-width: 767px) {
+  .blog-post-create-btn-wrapper {
+    padding-left: 0;
+    margin-bottom: 15px;
   }
 }
 .edit-icon {
