--- a/JaiSmi/Content/LessInput/Layout.css
+++ b/JaiSmi/Content/LessInput/Layout.css
@@ -37,17 +37,28 @@ body a:hover {
 }
 .container-fluid {
   padding: 0;
+  position: relative;
 }
 .header {
-  background-color: #242d34;
   width: 100%;
   height: 80px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
   box-shadow: 0 1px 3px 0.1 rgba(0, 0, 0, 0.5);
-  box-shadow: 0 1px 3px 0.1 #000000;
   behavior: url("/Scripts/Compatibility/PIE.htc");
 }
+.header .main-menu-icon-container {
+  margin-top: 10px;
+  text-align: left;
+}
+.header .main-menu-icon-container .main-menu-icon {
+  font-size: 30px;
+  display: inline-block;
+  text-align: right;
+  cursor: pointer;
+  padding-left: 15px;
+}
 .header .header-links-wrapper {
+  background-color: #242d34;
   width: 100%;
   vertical-align: bottom;
   text-align: center;
@@ -58,7 +69,6 @@ body a:hover {
   display: inline-block;
 }
 .header .header-links-wrapper ul li {
-  padding: 25px 0 22px 0;
   margin-right: 30px;
   list-style: none;
   display: inline-block;
@@ -68,12 +78,17 @@ body a:hover {
 }
 .header .header-links-wrapper ul li a {
   color: #ffffff;
+  padding: 25px 0 22px;
+  display: block;
 }
 .header .header-links-wrapper ul li a:hover {
   text-decoration: none;
-}
-.header .header-links-wrapper ul li:hover {
   border-bottom: 3px solid #ffffff;
+}
+@media screen and (max-width: 767px) {
+  .header .header-links-wrapper ul li a:hover {
+    border: none;
+  }
 }
 .header .header-links-wrapper ul li:last-child {
   margin-right: 30px;
@@ -85,30 +100,62 @@ body a:hover {
 }
 @media screen and (max-width: 767px) {
   .header .header-links-wrapper ul li {
+    width: 100%;
     margin-right: 0;
-    padding: 25px 5px;
-    display: block;
+    border-bottom: 1px solid #ffffff;
+    box-shadow: 1px 1px 3px 0px #ffffff;
+    behavior: url("/Scripts/Compatibility/PIE.htc");
   }
 }
-.header .header-links-wrapper ul li.link-selected {
+.header .header-links-wrapper ul li.link-selected a {
+  color: #f39643;
   border-bottom: 3px solid #ffffff;
 }
 @media screen and (max-width: 767px) {
+  .header .header-links-wrapper ul li.link-selected a {
+    border: none;
+  }
+}
+@media screen and (max-width: 767px) {
+  .header .header-links-wrapper ul {
+    display: block;
+  }
+}
+@media screen and (max-width: 767px) {
+  .header .header-links-wrapper {
+    /*height: 0;*/
+    max-height: 0;
+    overflow: hidden;
+    -moz-transition: max-height 0.35s ease-out;
+    -o-transition: max-height 0.35s ease-out;
+    -webkit-transition: max-height 0.35s ease-out;
+    transition: max-height 0.35s ease-out;
+  }
+}
+.header .auto-height {
+  /*height: 100%;*/
+  max-height: 400px;
+}
+@media screen and (max-width: 767px) {
   .header {
-    width: 80px;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
+    /*width: 80px;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;*/
+    height: auto;
+    margin: 0 0 -15px;
+    box-shadow: none;
+    behavior: url("/Scripts/Compatibility/PIE.htc");
   }
 }
 .content-wrapper {
   padding: 30px 50px;
+  margin-bottom: 70px;
 }
 @media screen and (max-width: 767px) {
   .content-wrapper {
     padding: 25px 15px;
-    margin-left: 100px;
   }
 }
 .footer {
@@ -116,11 +163,10 @@ body a:hover {
   width: 100%;
   height: 70px;
   display: table;
-  /*position: absolute;
-    bottom: 0;*/
+  position: absolute;
+  bottom: 0;
   box-shadow: 0 -1px 3px rgba(0, 0, 0, 0.1);
   box-shadow: 0 -1px 3px 0.1 rgba(0, 0, 0, 0.5);
-  box-shadow: 0 -1px 3px 0.1 #000000;
   behavior: url("/Scripts/Compatibility/PIE.htc");
 }
 .footer .copyright {
