--- a/JaiSmi/Content/LessInput/Layout.less
+++ b/JaiSmi/Content/LessInput/Layout.less
@@ -25,14 +25,26 @@ body {
 
 .container-fluid {
     padding: 0;
+    position: relative; // Needed for footer to be in place.
 }
 
 .header{
-    background-color: @header-background;
     width: 100%;
     height: 80px;
     .box-shadow(0, 1px, 3px, 0.1);
+    .main-menu-icon-container {
+        margin-top: 10px;
+        text-align: left;
+        .main-menu-icon {
+            font-size: 30px;
+            display: inline-block;
+            text-align: right;
+            cursor: pointer;
+            padding-left: 15px;
+        }
+    }
     .header-links-wrapper {
+        background-color: @header-background;
         width: 100%;
         vertical-align: bottom;
         text-align: center;
@@ -41,7 +53,6 @@ body {
             padding: 0;
             display: inline-block;
             li {
-                padding: 25px 0 22px 0;
                 margin-right: 30px;
                 list-style: none;
                 display: inline-block;
@@ -50,12 +61,15 @@ body {
                 cursor: pointer;
                 a {
                     color: @color-white;
+                    padding: 25px 0 22px;
+                    display: block;
                     &:hover {
                         text-decoration: none;
+                        border-bottom: 3px solid @color-white;
+                        @media screen and (max-width: @screen-xs-max) {
+                            border: none;
+                        }
                     }
-                }
-                &:hover {
-                    border-bottom: 3px solid @color-white;
                 }
                 &:last-child {
                     margin-right: 30px;
@@ -64,31 +78,54 @@ body {
                     }
                 }
                 @media screen and (max-width: @screen-xs-max) {
+                    width: 100%;
                     margin-right: 0;
-                    padding: 25px 5px;
-                    display: block;
+                    border-bottom: 1px solid @color-white;
+                    .box-shadow (1px, 1px, 3px, 0px, 0.3, @color-white);
                 }
-
             }
             li.link-selected {
-                border-bottom: 3px solid @color-white;
+                a {
+                    color: @color-orange;
+                    border-bottom: 3px solid @color-white;
+                    @media screen and (max-width: @screen-xs-max) {
+                        border: none;
+                    }
+                }
+            }
+            @media screen and (max-width: @screen-xs-max) {
+                display: block;
             }
         }
+        @media screen and (max-width: @screen-xs-max) {
+            /*height: 0;*/
+            max-height: 0; // animation works with max-height alone and not with height.
+            overflow: hidden;
+            .transition(max-height 0.35s ease-out);
+        }
+    }
+    .auto-height {
+        /*height: 100%;*/
+        max-height: 400px; // animation works with max-height alone and not with height.
     }
     @media screen and (max-width: @screen-xs-max) {
-        width: 80px;
+        /*width: 80px;
         height: 100%;
         position: absolute;
         top: 0;
-        left: 0;
+        left: 0;*/
+        height: auto;
+        margin: 0 0 -15px;
+        .box-shadow-custom(none);
     }
 }
 
 .content-wrapper {
     padding: 30px 50px;
+    margin-bottom: 70px; // Height of the footer.
     @media screen and (max-width: @screen-xs-max) {
         padding: 25px 15px;
-        margin-left: 100px; // Same as that of the header.
+        //margin-left: 100px; // Same as that of the header.
     }
 }
 
@@ -97,8 +134,8 @@ body {
     width: 100%;
     height: 70px;
     display: table;
-    /*position: absolute;
-    bottom: 0;*/
+    position: absolute;
+    bottom: 0;
     .box-shadow(0, -1px, 3px, 0.1);
     .copyright {
         color: #808080;
