--- a/JaiSmi/Content/LessInput/Shared.css
+++ b/JaiSmi/Content/LessInput/Shared.css
@@ -19,7 +19,6 @@
   background: #242d34;
   color: #ffffff;
   box-shadow: 1px 1px 3px 2px rgba(0, 0, 0, 0.3);
-  box-shadow: 1px 1px 3px 2px 0.3;
   behavior: url("/Scripts/Compatibility/PIE.htc");
   margin-bottom: 20px;
   font-size: 26px;
@@ -37,13 +36,18 @@
 .blog-content-wrapper .activity-wrapper .activity-grid .activity-item-link:hover {
   text-decoration: none;
 }
+@media screen and (max-width: 767px) {
+  .home-content-wrapper .activity-wrapper .activity-grid .activity-item-link,
+  .blog-content-wrapper .activity-wrapper .activity-grid .activity-item-link {
+    width: 150px;
+  }
+}
 .home-content-wrapper .activity-wrapper .activity-grid .activity-item,
 .blog-content-wrapper .activity-wrapper .activity-grid .activity-item {
   font-family: variane_script;
   display: inline-block;
   margin-bottom: 10px;
   box-shadow: 1px 1px 3px 2px rgba(0, 0, 0, 0.3);
-  box-shadow: 1px 1px 3px 2px 0.3;
   behavior: url("/Scripts/Compatibility/PIE.htc");
 }
 .home-content-wrapper .activity-wrapper .activity-grid .activity-item .activity-cover-container,
@@ -73,7 +77,7 @@
 @media screen and (max-width: 767px) {
   .home-content-wrapper .activity-wrapper,
   .blog-content-wrapper .activity-wrapper {
-    padding: 20px 0;
+    padding: 0;
   }
 }
 /*# sourceMappingURL=Shared.css.map */
