--- a/JaiSmi/Content/LessInput/Util.less
+++ b/JaiSmi/Content/LessInput/Util.less
@@ -24,6 +24,7 @@
 @color-black: #000000;
 @color-dark-grey: #333333;
 @color-dark-blue: #242D34;
+@color-orange: #f39643;
 @header-background: @color-dark-blue;// #b4d6e1;
 @body-background-img: '/Images/Shared/grass_190x190.jpg';
 
@@ -51,7 +52,7 @@
    .box-shadow-custom(@x @y @blur-radius @spread rgba(0, 0, 0, @alpha));
 }
 
-.box-shadow (@x: 0, @y: 3px, @blur-radius: 5px, @spread: 0, @color: #000) {
+.box-shadow (@x: 0, @y: 3px, @blur-radius: 5px, @spread: 0, @alpha: 0.5, @color: rgba(0, 0, 0, @alpha)) {
    .box-shadow-custom(@x @y @blur-radius @spread @color);
 }
 
@@ -69,6 +70,13 @@
 .word-wrap(@value){
     -ms-word-wrap: @value;
     word-wrap: @value;
+}
+
+.transition (@value) {
+    -moz-transition: @value;
+    -o-transition: @value;
+    -webkit-transition: @value;
+    transition: @value;
 }
 
 /* Font sizes */
