--- a/JaiSmi/Areas/Travel/Content/LessInput/Travel.less
+++ b/JaiSmi/Areas/Travel/Content/LessInput/Travel.less
@@ -14,7 +14,9 @@
             .new-album-btn {
                 font-size: 20px;
                 .new-album-btn-text {
-
+                    font-weight: normal;
+                    color: @color-white;
+                    line-height: 20px;
                 }
             }
         }
