--- a/JaiSmi/Content/LessInput/Util.less
+++ b/JaiSmi/Content/LessInput/Util.less
@@ -25,6 +25,9 @@
 @color-dark-grey: #333333;
 @color-dark-blue: #242D34;
 @color-orange: #f39643;
+@label-blue: #4285f4;
+@input-border: #757575;
+@input-border-focus: #4285f4;
 @header-background: @color-dark-blue;// #b4d6e1;
 @body-background-img: '/Images/Shared/grass_190x190.jpg';
 
