--- a/JaiSmi/Areas/Admin/Content/LessInput/Account.less
+++ b/JaiSmi/Areas/Admin/Content/LessInput/Account.less
@@ -4,6 +4,9 @@
     .login-container {
         width: 400px;      
     }
+    .signup-container {
+        width: 400px;      
+    }
     .row {
         margin: 10px 0;
     }  
@@ -11,6 +14,10 @@
         margin: 5px 0;
         font-size: 10px;
         color: @label-blue;
+    }
+    .error-message {
+        .account-label-row;
+        color: @error;
     }
     span.account-label {
         padding: 0;
