--- a/JaiSmi/Content/LessInput/Util.less
+++ b/JaiSmi/Content/LessInput/Util.less
@@ -28,6 +28,7 @@
 @label-blue: #4285f4;
 @input-border: #757575;
 @input-border-focus: #4285f4;
+@error: #d50000;
 @header-background: @color-dark-blue;// #b4d6e1;
 @body-background-img: '/Images/Shared/grass_190x190.jpg';
 
