--- a/JaiSmi/Areas/Admin/Views/Account/Login.cshtml
+++ b/JaiSmi/Areas/Admin/Views/Account/Login.cshtml
@@ -31,3 +31,15 @@
     </div>
 }
 
+@using (Html.BeginForm("ExternalLogin", "Account", new { ReturnUrl = "signin-google" }, FormMethod.Post))
+{
+    <div class="account-content-wrapper">
+        <div class="login-container container">
+            @Html.AntiForgeryToken()
+            <div class="row account-btn-row">
+                <button type="submit" class="btn btn-default" id="Google" name="provider" value="Google" title="Log in using your Google account">Google</button>
+            </div>
+        </div>
+    </div>
+}
+
