Owin Auth with Google, initial commit

--- a/JaiSmi/Content/LessInput/Shared.less
+++ b/JaiSmi/Content/LessInput/Shared.less
@@ -77,3 +77,27 @@
         }
     }
 }
+
+.login-control {
+    display: inline-block;
+    float: right;
+    margin: 18px 0;
+    .google-login-btn {
+        border: none;
+        padding: 0;
+        background: @header-background;
+    }
+    .google-login-icon {
+        width: 170px;
+        height: 43px;
+        background: url('/Images/Icons/btn_google_signin_light_normal_web@2x.png');
+        background-size: 170px auto;
+    }
+    .user-avatar {
+        font-size: 30px;
+        background: white;
+        border-radius: 30px;
+        display: block;
+        padding: 10px;
+    }
+}
