--- a/JaiSmi/Areas/Admin/Views/Account/Login.cshtml
+++ b/JaiSmi/Areas/Admin/Views/Account/Login.cshtml
@@ -37,7 +37,9 @@
         <div class="login-container container">
             @Html.AntiForgeryToken()
             <div class="row account-btn-row">
-                <button type="submit" class="btn btn-default" id="Google" name="provider" value="Google" title="Log in using your Google account">Google</button>
+                <button type="submit" class="btn btn-default" id="Google" name="provider" value="Google" title="Log in using your Google account">
+                    <img src="~/Images/Icons/btn_google_signin_dark_normal_web@2x.png" alt="Sign In With Google" />
+                </button>
             </div>
         </div>
     </div>
