--- a/JaiSmi/Content/LessInput/Shared.css
+++ b/JaiSmi/Content/LessInput/Shared.css
@@ -80,4 +80,27 @@
     padding: 0;
   }
 }
+.login-control {
+  display: inline-block;
+  float: right;
+  margin: 18px 0;
+}
+.login-control .google-login-btn {
+  border: none;
+  padding: 0;
+  background: #242d34;
+}
+.login-control .google-login-icon {
+  width: 170px;
+  height: 43px;
+  background: url('/Images/Icons/btn_google_signin_light_normal_web@2x.png');
+  background-size: 170px auto;
+}
+.login-control .user-avatar {
+  font-size: 30px;
+  background: white;
+  border-radius: 30px;
+  display: block;
+  padding: 10px;
+}
 /*# sourceMappingURL=Shared.css.map */
